# 3-package-mandarin_duck

./: Pipfile  README.md  example_program.py  pyproject.toml
.github/workflows/: ci.yml
src/nba_facts/: __init__.py  __main__.py  data.json  facts.py
tests/: test_facts.py
